<resources>
    <string name="app_name">MyBookApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sort_name">Название</string>
    <string name="sort_size">Размер</string>
    <string name="sort_date">Время добавления</string>
    <string name="library">Библиотека</string>
    <string name="favourite">Избранное</string>
    <string name="wish">Хочу прочитать</string>
    <string name="finished">Прочитанное</string>
    <string name="other">Прочее</string>
    <string name="tool">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="scan">Сканировать память</string>
    <string name="search">Поиск</string>
</resources>
