<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_library"
                android:title="@string/library" android:icon="@drawable/ic_home_black_24dp"/>
        <item
                android:id="@+id/nav_favourite"
                android:title="@string/favourite" android:icon="@drawable/ic_favorite_border_black_24dp"/>
        <item
                android:id="@+id/nav_wishes"
                android:title="@string/wish" android:icon="@drawable/ic_wishes_black_24dp"/>
        <item
                android:id="@+id/nav_finished"
                android:title="@string/finished" android:icon="@drawable/ic_finished_black_24dp"/>
        <item
                android:id="@+id/nav_scan"
                android:title="@string/scan"/>
    </group>
        <item   android:title="@string/other">
            <menu>
                <item android:title="@string/exit"
                      android:id="@+id/nav_exit" />
            </menu>
        </item>



</menu>
